<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/lighter_gradient_bg"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/add_contact"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="6dp"
            android:text="@string/where_met" />

        <Spinner
            android:id="@+id/spinnerLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/local" />

        <EditText
            android:id="@+id/editTextNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:hint="@string/type_number"
            android:inputType="number" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />

        <Button
            android:id="@+id/buttonAddAmigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_contact"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/blank"
            android:background="@drawable/primary_bg_rectangle"
            />

        <TextView
            android:id="@+id/textViewListaAmigos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/list_contacts"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:textSize="25dp"

            android:gravity="center_horizontal"

            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>